Added FORTE paper and AFT reference

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -72,7 +72,7 @@ be reposted without the explicit permission of the copyright holder.
 <br><a href="#CHI">CHI</a>
 <br><a href="#CIC">CIC</a>
 <br><a href="#CODASPY">CODASPY</a>
-<br><a href="#CollaborateCom">CollaborateCom</a>
+<br><a href="#CollaborateCom">CollabCom</a>
 <br><a href="#Computer_Journal">Comp. J.</a>
 <br><a href="#Computer_Networks">Comp. Net.</a>
 <br><a href="#COMSNETS">COMSNETS</a>
@@ -102,6 +102,7 @@ be reposted without the explicit permission of the copyright holder.
 <td><font size="-1">
 <a href="#FAST">FAST</a>
 <br><a href="#FC">FC</a>
+<br><a href="#FORTE">FORTE</a>
 </font></td>
 
 <td><font size="-1">
@@ -1777,6 +1778,16 @@ Cryptography and Data Security (FC)</a></i></b>
 mix systems</a></b>
 <br>B. N. Levine, M. K. Reiter, C. Wang and M. Wright.
 Lecture Notes in Computer Science 3110, pages 251&#8211;265. <font size="-1">&copy;Springer</font>
+</td></tr>
+</table></p>
+
+<hr>
+
+<p><b><i><a name="FORTE">International Conference on Formal Techniques for Distributed Objects, Components, and Systems (FORTE)</a></i></b>
+<table border=0 cellpadding=3>
+<tr valign=top><td>2024</td>
+<td><b><a href="./2024/FORTE.pdf">Formally verifying a rollback-prevention protocol for TEEs</a></b>
+<br>W. Wang, J. Niu, M. K. Reiter, and Y. Zhang.  Lecture Notes in Computer Science 14678, pages 155&#8211;173.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font> 
 </td></tr>
 </table></p>
 
