--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -97,6 +97,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
 </li>
 
+<li><b><a href="./2024/FORTE.pdf">Formally verifying a rollback-prevention protocol for TEEs</a></b>
+<br>W. Wang, J. Niu, M. K. Reiter, and Y. Zhang
+<br>In <i>Proceedings of the 44th International Conference on Formal Techniques for Distributed Objects, Components, and Systems</i>, pages 155&#8211;173, June 2024.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font> 
+</li>
+
 <li><b><a href="./2024/NDSS2.pdf">Bernoulli honeywords</a></b>
 <br>K. C. Wang and M. K. Reiter
 <br>In <i>Proceedings of the 31st ISOC Network and Distributed System Security Symposium</i>, February 2024.  <font size="-1"><a href="https://dx.doi.org/10.14722/ndss.2024.23295">doi:10.14722/ndss.2024.23295</a></font>
