--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -88,7 +88,7 @@ be reposted without the explicit permission of the copyright holder.
 
 <ul>
 <li><b><a name="2024"><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></a></b>
-<br>H. Liu, M. K. Reiter, and N. Gong
+<br>H. Liu, M. K. Reiter, and N. Z. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
 </li>
 
