--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2305,7 +2305,7 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
-<br>H. Liu, M. K. Reiter, and N. Gong.
+<br>H. Liu, M. K. Reiter, and N. Z. Gong.
 </td></tr>
 
 <tr valign=top><td></td>
