Added DSN 2024 paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1522,6 +1522,12 @@ href="http://dx.doi.org/10.1109/32.502223">doi:10.1109/32.502223</a> &nbsp; &cop
 
 <p><b><i><a name="DSN">IEEE/IFIP International Conference on Dependable Systems and Networks (DSN)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2024</td>
+<td><b><a href="./2024/DSN.pdf">Delphi: Efficient asynchronous approximate agreement for distributed oracles</a></b>
+<br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, C.-D. Liu-Zhang, and M. K. Reiter
+<br>Additional information: &nbsp; <a href="https://github.com/akhilsb/delphi-rs">implementation</a>
+</td></tr>
+
 <tr valign=top><td>2019</td>
 <td><b><a href="./2019/DSN.pdf">SBFT: A scalable and decentralized trust infrastructure</a></b>
 <br>G. G. Gueta, I. Abraham, S. Grossman, D. Malkhi, B. Pinkas, M. K. Reiter, D.-A. Seredinschi, O. Tamir, and A. Tomescu. <font size="-1"><a href="http://dx.doi.org/10.1109/DSN.2019.00063">doi:10.1109/DSN.2019.00063</a> &nbsp; &copy;IEEE</font>
