Added ICDCS paper

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1690,6 +1690,12 @@ sans origin-destination identifiers: Algorithms and analysis</a></b>
 Computing Systems (ICDCS)</a></i></b>
 <table border=0 cellpadding=3>
 
+<tr valign=top><td>2024</td>
+<td><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
+<br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi. <font size="-1">&copy;IEEE</font>
+<br>Additional information: &nbsp; <a href="https://github.com/akhilsb/sensorbft-rs/">implementation</a>
+</td></tr>
+
 <tr valign=top><td>2017</td>
 <td><b><a href="./2017/ICDCS.pdf">Flow reconnaissance via timing attacks on SDN switches</a></b>
 <br>S. Liu, M. K. Reiter, and V. Sekar.  Pages 196&#8211;206. <font size="-1"><a href="http://dx.doi.org/10.1109/ICDCS.2017.281">doi:10.1109/ICDCS.2017.281</a> &nbsp; &copy;IEEE</font>
