--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -97,6 +97,12 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
 </li>
 
+<li><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
+<br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi
+<br>In <i>Proceedings of the 44th IEEE International Conference on Distributed Computing Systems</i>, July 2024.  <font size="-1">&copy;IEEE</font>
+<br>Additional information: &nbsp; <a href="https://github.com/akhilsb/sensorbft-rs/">implementation</a>
+</li>
+
 <li><b><a href="./2024/DSN.pdf">Delphi: Efficient asynchronous approximate agreement for distributed oracles</a></b>
 <br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, C.-D. Liu-Zhang, and M. K. Reiter
 <br>In <i>Proceedings of the 54th IEEE/IFIP International Conference on Dependable Systems and Networks</i>, June 2024.
