Update USENIX papers

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2325,6 +2325,17 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <br>Z. Huang, L. Bauer, and M. K. Reiter.
 </td></tr>
   
+<tr valign=top><td></td>
+<td><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
+retrievals with dependencies</a></b>
+<br>P. Jain, A. C. Reed, and M. K. Reiter.
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b><a href="./2024/USENIX4.pdf">On the criticality of integrity protection in 5G fronthaul networks</a></b>
+<br>J. Xing, S. Yoo, X. Foukas, D. Kim, and M. K. Reiter
+</td></tr>
+
 <tr valign=top><td>2023</td>
 <td><b><a href="./2023/USENIX1.pdf">Distance-aware private set intersection</a></b>
 <br>A. Chakraborti, G. Fanti, and M. K. Reiter.
