Updates for USENIX papers

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -97,6 +97,17 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
 </li>
 
+<li><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
+retrievals with dependencies</a></b>
+<br>P. Jain, A. C. Reed, and M. K. Reiter
+<br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+</li>
+
+<li><b><a href="./2024/USENIX4.pdf">On the criticality of integrity protection in 5G fronthaul networks</a></b>
+<br>J. Xing, S. Yoo, X. Foukas, D. Kim, and M. K. Reiter
+<br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+</li>
+
 <li><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
 <br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi
 <br>In <i>Proceedings of the 44th IEEE International Conference on Distributed Computing Systems</i>, July 2024.  <font size="-1">&copy;IEEE</font>
