Added implementation links.

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2323,12 +2323,14 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td></td>
 <td><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter.
+<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
 </td></tr>
   
 <tr valign=top><td></td>
 <td><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
 retrievals with dependencies</a></b>
 <br>P. Jain, A. C. Reed, and M. K. Reiter.
+<br>Additional information: &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
 </td></tr>
 
 <tr valign=top><td></td>
