--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -95,12 +95,14 @@ be reposted without the explicit permission of the copyright holder.
 <li><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
 </li>
 
 <li><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
 retrievals with dependencies</a></b>
 <br>P. Jain, A. C. Reed, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+<br>Additional information: &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
 </li>
 
 <li><b><a href="./2024/USENIX4.pdf">On the criticality of integrity protection in 5G fronthaul networks</a></b>
