--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 	  </div>
 	  <div class="frame">
 	    <table>
-	      <tr><td style="text-align:center; padding:0 5px 0 5px"><a href="https://canvas.duke.edu/courses/26602"><span class="fas fa-chalkboard-teacher fa-2x"></span></a></td></tr>
-	      <tr><td style="text-align:center">spr 2024</td></tr>
+	      <tr><td style="text-align:center; padding:0 5px 0 5px"><a href="https://canvas.duke.edu/courses/39789"><span class="fas fa-chalkboard-teacher fa-2x"></span></a></td></tr>
+	      <tr><td style="text-align:center">fall 2024</td></tr>
 	    </table>
 	  </div>
 	</td>
