Added paper DOI.

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1692,7 +1692,7 @@ Computing Systems (ICDCS)</a></i></b>
 
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
-<br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi. <font size="-1">&copy;IEEE</font>
+<br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi. <font size="-1"><a href="https://dx.doi.org/10.1109/ICDCS60910.2024.00026">doi:10.1109/ICDCS60910.2024.00026</a> &nbsp; &copy;IEEE</font>
 <br>Additional information: &nbsp; <a href="https://github.com/akhilsb/sensorbft-rs/">implementation</a>
 </td></tr>
 
