--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -112,7 +112,7 @@ retrievals with dependencies</a></b>
 
 <li><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
 <br>A. Bandarupalli, A. Bhat, S. Chaterji, M. K. Reiter, A. Kate, and S. Bagchi
-<br>In <i>Proceedings of the 44th IEEE International Conference on Distributed Computing Systems</i>, July 2024.  <font size="-1">&copy;IEEE</font>
+<br>In <i>Proceedings of the 44th IEEE International Conference on Distributed Computing Systems</i>, July 2024.  <font size="-1"><a href="https://dx.doi.org/10.1109/ICDCS60910.2024.00026">doi:10.1109/ICDCS60910.2024.00026</a> &nbsp; &copy;IEEE</font>
 <br>Additional information: &nbsp; <a href="https://github.com/akhilsb/sensorbft-rs/">implementation</a>
 </li>
 
