Added implementation links

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -2318,6 +2318,7 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Z. Gong.
+<br>Additional information: &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
 </td></tr>
 
 <tr valign=top><td></td>
