Added CCS 2024 papers

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -239,6 +239,27 @@ be reposted without the explicit permission of the copyright holder.
 <p><b><i><a name="CCS">ACM Conference on Computer and Communications
 Security (CCS)</a></i></b>
 <table border=0 cellpadding=3>
+<tr valign=top><td>2024</td>
+<td><b><a href="./2024/CCS4.pdf">Training robust ML-based raw-binary malware detectors in hours, not months</a></b>
+<br>K. Lucas, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif. <font size="-1"><a href="https://doi.org/10.1145/3658644.3690208">doi:10.1145/3658644.3690208</a></font>
+<br>Additional information: &nbsp; <a href="https://doi.org/10.1184/R1/26322505">implementation</a>
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b><a href="./2024/CCS3.pdf">A general framework for data-use auditing of ML models</a></b>
+<br>Z. Huang, N. Z. Gong, and M. K. Reiter. <font size="-1"><a href="https://doi.org/10.1145/3658644.3690226">doi:10.1145/3658644.3690226</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/ML_data_auditing">implementation</a>
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b><a href="./2024/CCS2.pdf">PG: Byzantine fault-tolerant and privacy-preserving sensor fusion with guaranteed output delivery</a></b>
+<br>C. Jin, C. Yin, M. van Dijk, S. Duan, F. Massacci, M. K. Reiter, and H. Zhang. <font size="-1"><a href="https://doi.org/10.1145/3658644.3670343">doi:10.1145/3658644.3670343</a></font>
+</td></tr>
+
+<tr valign=top><td></td>
+<td><b><a href="./2024/CCS1.pdf">Random beacons in Monte Carlo: Efficient asynchronous random beacon without threshold cryptography</a></b>
+<br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, and M. K. Reiter. <font size="-1"><a href="https://doi.org/10.1145/3658644.3670326">doi:10.1145/3658644.3670326</a></font>
+</td></tr>
 
 <tr valign=top><td>2022</td>
 <td><b><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
