--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -87,7 +87,29 @@ be reposted without the explicit permission of the copyright holder.
 <hr>
 
 <ul>
-<li><b><a name="2024"><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></a></b>
+<li><b><a name="2024"><a href="./2024/CCS4.pdf">Training robust ML-based raw-binary malware detectors in hours, not months</a></a></b>
+<br>K. Lucas, W. Lin, L. Bauer, M. K. Reiter, and M. Sharif
+<br>In <i>Proceedings of the 31st ACM Conference on Computer and Communications Security</i>, October 2024. <font size="-1"><a href="https://doi.org/10.1145/3658644.3690208">doi:10.1145/3658644.3690208</a></font>
+<br>Additional information: &nbsp; <a href="https://doi.org/10.1184/R1/26322505">implementation</a>
+</li>  
+  
+<li><b><a href="./2024/CCS3.pdf">A general framework for data-use auditing of ML models</a></b>
+<br>Z. Huang, N. Z. Gong, and M. K. Reiter
+<br>In <i>Proceedings of the 31st ACM Conference on Computer and Communications Security</i>, October 2024. <font size="-1"><a href="https://doi.org/10.1145/3658644.3690226">doi:10.1145/3658644.3690226</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/ML_data_auditing">implementation</a>
+</li>
+
+<li><b><a href="./2024/CCS2.pdf">PG: Byzantine fault-tolerant and privacy-preserving sensor fusion with guaranteed output delivery</a></b>
+<br>C. Jin, C. Yin, M. van Dijk, S. Duan, F. Massacci, M. K. Reiter, and H. Zhang
+<br>In <i>Proceedings of the 31st ACM Conference on Computer and Communications Security</i>, October 2024. <font size="-1"><a href="https://doi.org/10.1145/3658644.3670343">doi:10.1145/3658644.3670343</a></font>
+</li>
+
+<li><b><a href="./2024/CCS1.pdf">Random beacons in Monte Carlo: Efficient asynchronous random beacon without threshold cryptography</a></b>
+<br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, and M. K. Reiter
+<br>In <i>Proceedings of the 31st ACM Conference on Computer and Communications Security</i>, October 2024. <font size="-1"><a href="https://doi.org/10.1145/3658644.3670326">doi:10.1145/3658644.3670326</a></font>
+</li>
+
+<li><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Z. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
 <br>Additional information: &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
