Added AFT paper.

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -60,6 +60,7 @@ be reposted without the explicit permission of the copyright holder.
 <a href="#AAAI">AAAI</a>      
 <br><a href="#ACNS">ACNS</a>
 <br><a href="#ACSAC">ACSAC</a>
+<br><a href="#AFT">AFT</a>
 <br><a href="#ANCS">ANCS</a>
 <br><a href="#ASIACCS">ASIACCS</a>
 <br><a href="#ASPLOS">ASPLOS</a>
@@ -1676,6 +1677,16 @@ and P. Rutenbar.
 Lecture Notes in Computer Science 3650, pages 431&#8211;445.
 <font size="-1"><a
 href="http://dx.doi.org/10.1007/11556992_31">doi:10.1007/11556992_31</a> &nbsp; &copy;Springer</font>
+</td></tr>
+</table></p>
+
+<hr>
+
+<p><b><i><a name="AFT">International Conference on Advances in Financial Technologies (AFT)</a></i></b>
+<table border=0 cellpadding=3>
+<tr valign=top><td>2024</td>
+<td><b><a href="./2024/AFT.pdf">CrudiTEE: A stick-and-carrot approach to building trustworthy cryptocurrency wallets with TEEs</a></b>
+<br>L. Zhou, Z. Liu, F. Zhang, and M. K. Reiter. <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.AFT.2024.16">doi:10.4230/LIPIcs.AFT.2024.16</a></font>
 </td></tr>
 </table></p>
 
