--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -109,6 +109,11 @@ be reposted without the explicit permission of the copyright holder.
 <br>In <i>Proceedings of the 31st ACM Conference on Computer and Communications Security</i>, October 2024. <font size="-1"><a href="https://doi.org/10.1145/3658644.3670326">doi:10.1145/3658644.3670326</a></font>
 </li>
 
+<li><b><a href="./2024/AFT.pdf">CrudiTEE: A stick-and-carrot approach to building trustworthy cryptocurrency wallets with TEEs</a></b>
+<br>L. Zhou, Z. Liu, F. Zhang, and M. K. Reiter
+<br>In <i>Proceedings of the 6th International Conference on Advances in Financial Technologies</i>, September 2024. <font size="-1"><a href="https://doi.org/10.4230/LIPIcs.AFT.2024.16">doi:10.4230/LIPIcs.AFT.2024.16</a></font>
+</li>
+
 <li><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Z. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
