Conference talk links on USENIX 2024 papers.

--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -117,25 +117,26 @@ be reposted without the explicit permission of the copyright holder.
 <li><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Z. Gong
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.
-<br>Additional information: &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/MtMY2pM8JDw">conference talk</a> &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
 </li>
 
 <li><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
-<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/O9fHvsUZu9E">conference talk</a> &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
 </li>
 
 <li><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
 retrievals with dependencies</a></b>
 <br>P. Jain, A. C. Reed, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
-<br>Additional information: &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/71h2ioFzMOk">conference talk</a> &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
 </li>
 
 <li><b><a href="./2024/USENIX4.pdf">On the criticality of integrity protection in 5G fronthaul networks</a></b>
 <br>J. Xing, S. Yoo, X. Foukas, D. Kim, and M. K. Reiter
 <br>In <i>Proceedings of the 33rd USENIX Security Symposium</i>, August 2024.  
+<br>Additional information: &nbsp; <a href="https://youtu.be/EhC-pYTVncg">conference talk</a>
 </li>
 
 <li><b><a href="./2024/ICDCS.pdf">SensorBFT: Fault-tolerant target localization using Voronoi diagrams and approximate agreement</a></b>
@@ -146,7 +147,7 @@ retrievals with dependencies</a></b>
 
 <li><b><a href="./2024/DSN.pdf">Delphi: Efficient asynchronous approximate agreement for distributed oracles</a></b>
 <br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, C.-D. Liu-Zhang, and M. K. Reiter
-<br>In <i>Proceedings of the 54th IEEE/IFIP International Conference on Dependable Systems and Networks</i>, June 2024.
+<br>In <i>Proceedings of the 54th IEEE/IFIP International Conference on Dependable Systems and Networks</i>, June 2024. <font size="-1"><a href="https://doi.org/10.1109/DSN58291.2024.00051">doi:10.1109/DSN58291.2024.00051</a></font>
 <br>Additional information: &nbsp; <a href="https://github.com/akhilsb/delphi-rs">implementation</a>
 </li>
 
