--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1546,7 +1546,7 @@ href="http://dx.doi.org/10.1109/32.502223">doi:10.1109/32.502223</a> &nbsp; &cop
 <table border=0 cellpadding=3>
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/DSN.pdf">Delphi: Efficient asynchronous approximate agreement for distributed oracles</a></b>
-<br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, C.-D. Liu-Zhang, and M. K. Reiter
+<br>A. Bandarupalli, A. Bhat, S. Bagchi, A. Kate, C.-D. Liu-Zhang, and M. K. Reiter.  <font size="-1"><a href="https://doi.org/10.1109/DSN58291.2024.00051">doi:10.1109/DSN58291.2024.00051</a></font>
 <br>Additional information: &nbsp; <a href="https://github.com/akhilsb/delphi-rs">implementation</a>
 </td></tr>
 
@@ -2350,25 +2350,26 @@ G. R. Ganger, N. Gupta, and M. K. Reiter.  Pages 89&#8211;103.
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/USENIX1.pdf">Mudjacking: Patching backdoor vulnerabilities in foundation models</a></b>
 <br>H. Liu, M. K. Reiter, and N. Z. Gong.
-<br>Additional information: &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/MtMY2pM8JDw">conference talk</a> &nbsp; <a href="https://github.com/tdczlhb/Mudjacking">implementation</a>
 </td></tr>
 
 <tr valign=top><td></td>
 <td><b><a href="./2024/USENIX2.pdf">The impact of exposed passwords on honeyword efficacy</a></b>
 <br>Z. Huang, L. Bauer, and M. K. Reiter.
-<br>Additional information: &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/O9fHvsUZu9E">conference talk</a> &nbsp; <a href="https://github.com/zonghaohuang007/honeywords-analysis">implementation</a>
 </td></tr>
   
 <tr valign=top><td></td>
 <td><b><a href="./2024/USENIX3.pdf">Near-optimal constrained padding for object
 retrievals with dependencies</a></b>
 <br>P. Jain, A. C. Reed, and M. K. Reiter.
-<br>Additional information: &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
+<br>Additional information: &nbsp; <a href="https://youtu.be/71h2ioFzMOk">conference talk</a> &nbsp; <a href="https://github.com/pranay-jain/constrained-padding-sequences">implementation</a>
 </td></tr>
 
 <tr valign=top><td></td>
 <td><b><a href="./2024/USENIX4.pdf">On the criticality of integrity protection in 5G fronthaul networks</a></b>
-<br>J. Xing, S. Yoo, X. Foukas, D. Kim, and M. K. Reiter
+<br>J. Xing, S. Yoo, X. Foukas, D. Kim, and M. K. Reiter.
+<br>Additional information: &nbsp; <a href="https://youtu.be/EhC-pYTVncg">conference talk</a>
 </td></tr>
 
 <tr valign=top><td>2023</td>
