Adding DOIs for FC articles.

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1802,13 +1802,13 @@ Cryptography and Data Security (FC)</a></i></b>
 
 <tr valign=top><td>2023</td>
 <td><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
-<br>A. Bhat, A. Bandarupalli, S. Bagchi, A. Kate, and M. K. Reiter.
+<br>A. Bhat, A. Bandarupalli, S. Bagchi, A. Kate, and M. K. Reiter.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-47754-6_3">doi:10.1007/978-3-031-47754-6_3</a></font>
 </td></tr>
   
 <tr valign=top><td>2016</td>
 <td><b><a href="./2016/FC.pdf">Introducing reputation systems to the economics of outsourcing computations to rational workers</a></b>
 <br>J. Aljuraidan, L. Bauer, M. K. Reiter, and M. Beckerle.
-<font size="-1">&copy;Springer</font>
+<font size="-1"><a href="https://doi.org/10.1007/978-3-662-54970-4_4">doi:10.1007/978-3-662-54970-4_4</a> &nbsp; &copy;Springer</font>
 </td></tr>
   
 <tr valign=top><td>2012</td>
