--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -207,7 +207,7 @@ retrievals with dependencies</a></b>
 <li><b><a href="./2023/FC.pdf">The unique chain rule and its applications</a></b>
 <br>A. Bhat, A. Bandarupalli, S. Bagchi, A. Kate, and M. K. Reiter
 <br>In <i>Proceedings of the 27th International Conference on Financial
-Cryptography and Data Security</i>, May 2023.
+Cryptography and Data Security</i>, May 2023.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-47754-6_3">doi:10.1007/978-3-031-47754-6_3</a></font>
 </li>
 
 <li><b><a name="2022"><a href="./2022/OPODIS.pdf">Communication-efficient BFT
@@ -456,7 +456,7 @@ Computer Science 10493), pages 210&#8211;228, September 2017.
 
 <li><b><a href="./2016/FC.pdf">Introducing reputation systems to the economics of outsourcing computations to rational workers</a></b>
 <br>J. Aljuraidan, L. Bauer, M. K. Reiter, and M. Beckerle
-<br>In <i>Proceedings of the 20th International Conference on Financial Cryptography and Data Security</i>, February 2016.
+<br>In <i>Proceedings of the 20th International Conference on Financial Cryptography and Data Security</i>, February 2016.  <font size="-1"><a href="https://doi.org/10.1007/978-3-662-54970-4_4">doi:10.1007/978-3-662-54970-4_4</a> &nbsp; &copy;Springer</font>
 </li>
   
 <li><b><a name="2015"><a href="./2015/CIC.pdf">WACCO and LOKO: Strong consistency at global scale</a></a></b>
