--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1821,7 +1821,7 @@ Cryptography and Data Security (FC)</a></i></b>
 <td><b><a href="./2004/FC.pdf">Timing attacks in low-latency
 mix systems</a></b>
 <br>B. N. Levine, M. K. Reiter, C. Wang and M. Wright.
-Lecture Notes in Computer Science 3110, pages 251&#8211;265. <font size="-1">&copy;Springer</font>
+Lecture Notes in Computer Science 3110, pages 251&#8211;265. <font size="-1"><a href="http://dx.doi.org/10.1007/978-3-540-27809-2_25">doi:10.1007/978-3-540-27809-2_25</a> &nbsp; &copy;Springer</font>
 </td></tr>
 </table></p>
 
@@ -2078,7 +2078,7 @@ Lecture Notes in Computer Science 3858, pages 63&#8211;81.
 <td><b><a href="./2004/RAID.pdf">Seurat: A pointillist
 approach to anomaly detection</a></b>
 <br>Y. Xie, H. Kim, D. R. O'Hallaron, M. K. Reiter and H. Zhang.
-Lecture Notes in Computer Science 3224, pages 238&#8211;257. <font size="-1">&copy;Springer</font>
+Lecture Notes in Computer Science 3224, pages 238&#8211;257. <font size="-1"><a href="https://doi.org/10.1007/978-3-540-30143-1_13">doi:10.1007/978-3-540-30143-1_13</a> &nbsp; &copy;Springer</font>
 </td></tr>
 </table></p>
 
