--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -1515,7 +1515,7 @@ approach to anomaly detection</a></b>
 Symposium, RAID 2004</i>
 (Lecture Notes in Computer Science 3224), pages 238&#8211;257,
 September 2004.
-<font size="-1">&copy;Springer</font>
+<font size="-1"><a href="https://doi.org/10.1007/978-3-540-30143-1_13">doi:10.1007/978-3-540-30143-1_13</a> &nbsp; &copy;Springer</font>
 </li>
 
 <li><b><a href="./2004/FC.pdf">Timing attacks in low-latency
@@ -1524,7 +1524,7 @@ mix systems</a></b>
 <br>In <i>Financial Cryptography: 8th International Conference, FC
 2004</i> (Lecture Notes in Computer Science 3110),
 pages 251&#8211;265, September 2004.
-<font size="-1">&copy;Springer</font>
+<font size="-1"><a href="http://dx.doi.org/10.1007/978-3-540-27809-2_25">doi:10.1007/978-3-540-27809-2_25</a> &nbsp; &copy;Springer</font>
 </li>
 
 <li>
