--- a/students.html
+++ b/students.html
@@ -37,11 +37,13 @@ application substantially.
 <h3><a name="present">Present students</a></h3>
 <p> I currently advise the following Ph.D. students:
 <ul>
+<li>Anna Gerchanovsky</li>
 <li>Adam Humphries</li>
 <li>Zonghao Huang</li>
 <li>Mridu Nanda</li>
 <li>Andrew Reed</li>
 <li>Sara Schwarz-Iglesias</li>
+<li>Weili Wang</li>
 <li>Xinyuan Zhang</li>
 <li>Yujie Zhang</li>
 </ul>
