Moved Andrew Reed to graduated.

--- a/students.html
+++ b/students.html
@@ -41,7 +41,6 @@ application substantially.
 <li>Adam Humphries</li>
 <li>Zonghao Huang</li>
 <li>Mridu Nanda</li>
-<li>Andrew Reed</li>
 <li>Sara Schwarz-Iglesias</li>
 <li>Weili Wang</li>
 <li>Xinyuan Zhang</li>
@@ -110,6 +109,9 @@ Techniques for Securing Storage Systems</a></i>
 Oprea</a>, Ph.D., 2008.
 <br>Thesis: <i><a href="./theses/foprea.pdf">Quorum Placement on
 Wide-Area Networks</a></i>
+</li>
+<li><a href="https://andrewreed.io">Andrew Reed</a>, Ph.D., 2025.
+  <br>Thesis: <i>Hiding Object Sizes with Constrained Padding in Multiple Settings</i>
 </li>
 <li><a href="http://uk.linkedin.com/pub/asad-samar/0/ba8/7b8/">Asad Samar</a>, Ph.D., 2006.
 <br>Thesis: <i><a href="./theses/samar.pdf">Quiver on the Edge:
