Added implementation links for FORTE 2024 paper.

--- a/papers/byForum.html
+++ b/papers/byForum.html
@@ -1831,7 +1831,8 @@ Lecture Notes in Computer Science 3110, pages 251&#8211;265. <font size="-1"><a 
 <table border=0 cellpadding=3>
 <tr valign=top><td>2024</td>
 <td><b><a href="./2024/FORTE.pdf">Formally verifying a rollback-prevention protocol for TEEs</a></b>
-<br>W. Wang, J. Niu, M. K. Reiter, and Y. Zhang.  Lecture Notes in Computer Science 14678, pages 155&#8211;173.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font> 
+<br>W. Wang, J. Niu, M. K. Reiter, and Y. Zhang.  Lecture Notes in Computer Science 14678, pages 155&#8211;173.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font>
+<br>Additional information: &nbsp; <a href="https://github.com/wwl020/TIKS-Proof-in-Ivy">implementation</a>
 </td></tr>
 </table></p>
 
