--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -153,7 +153,8 @@ retrievals with dependencies</a></b>
 
 <li><b><a href="./2024/FORTE.pdf">Formally verifying a rollback-prevention protocol for TEEs</a></b>
 <br>W. Wang, J. Niu, M. K. Reiter, and Y. Zhang
-<br>In <i>Proceedings of the 44th International Conference on Formal Techniques for Distributed Objects, Components, and Systems</i>, pages 155&#8211;173, June 2024.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font> 
+<br>In <i>Proceedings of the 44th International Conference on Formal Techniques for Distributed Objects, Components, and Systems</i>, pages 155&#8211;173, June 2024.  <font size="-1"><a href="https://doi.org/10.1007/978-3-031-62645-6_9">doi:10.1007/978-3-031-62645-6_9</a> &nbsp; &copy;IFIP</font>
+<br>Additional information: &nbsp; <a href="https://github.com/wwl020/TIKS-Proof-in-Ivy">implementation</a>
 </li>
 
 <li><b><a href="./2024/NDSS2.pdf">Bernoulli honeywords</a></b>
