--- a/papers/byYear.html
+++ b/papers/byYear.html
@@ -220,6 +220,7 @@ using small trusted hardware to tolerate minority corruption</a></a></b>
 <li><b><a href="./2022/CCS.pdf">ENGRAFT: Enclave-guarded Raft on Byzantine faulty nodes</a></b>
 <br>W. Wang, S. Deng, J. Niu, M. K. Reiter, and Y. Zhang
 <br>In <i>Proceedings of the 29th ACM Conference on Computer and Communications Security</i>, November 2022. <font size="-1"><a href="https://doi.org/10.1145/3548606.3560639">doi:10.1145/3548606.3560639</a></font>
+<br>Additional information: &nbsp; <a href="https://github.com/wwl020/ENGRAFT">implementation</a>
 </li>
 
 <li><b><a href="./2022/ICML.pdf">Constrained gradient descent: A powerful and principled evasion attack against neural networks</a></b>
