Added doi for Andrew Reed's dissertation.

--- a/students.html
+++ b/students.html
@@ -59,84 +59,84 @@ application substantially.
 The following students have completed a Ph.D. under my supervision.
 <ul>
 <li><a href="http://www.linkedin.com/pub/michael-abd-el-malek/0/380/300">Michael Abd-El-Malek</a>, Ph.D., 2010.
-<br>Thesis: <i><a href="./theses/abd-el-malek.pdf">File System Virtual Appliances</a></i>
+<br>Dissertation: <i><a href="./theses/abd-el-malek.pdf">File System Virtual Appliances</a></i>
 </li>
 <li><a href="https://www.linkedin.com/pub/darrell-bethea/103/a06/158">Darrell Bethea</a>, Ph.D., 2015.
-<br>Thesis: <i><a href="https://doi.org/10.17615/rh2k-q093">WACCO and LOKO: Strong Consistency at Global Scale</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/rh2k-q093">WACCO and LOKO: Strong Consistency at Global Scale</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/andrew-chi-burger/">Andrew Chi</a>, Ph.D., 2023.
-<br>Thesis: <i><a href="https://doi.org/10.17615/0316-8395">Verifying the Behavior of Security-Impacting Programs</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/0316-8395">Verifying the Behavior of Security-Impacting Programs</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/robertacochran">Robby Cochran</a>, Ph.D., 2016.
-<br>Thesis: <i><a href="https://doi.org/10.17615/2pdv-3313">Symbolic Verification of Remote Client Behavior in Distributed Systems</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/2pdv-3313">Symbolic Verification of Remote Client Behavior in Distributed Systems</a></i>
 </li>
 <li><a href="http://www.linkedin.com/in/mpcollins">Michael Collins</a>,
 Ph.D., 2008.
-<br>Thesis: <i><a href="./theses/collins.pdf">A Protocol Graph
+<br>Dissertation: <i><a href="./theses/collins.pdf">A Protocol Graph
 Based Anomaly Detection System</a></i>
 </li>
 <li><a href="http://flyer.sis.smu.edu.sg/">Debin Gao</a>, Ph.D., 2007.
-<br>Thesis: <i><a href="./theses/gao.pdf">Gray-box Anomaly
+<br>Dissertation: <i><a href="./theses/gao.pdf">Gray-box Anomaly
 Detection Using System Call Monitoring</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/scott-garriss-7112876">Scott Garriss</a>,
 Ph.D., 2008.
-<br>Thesis: <i><a href="./theses/garriss.pdf">Efficient, Usable
+<br>Dissertation: <i><a href="./theses/garriss.pdf">Efficient, Usable
 Proof-Construction Strategies for Distributed Access-Control Systems</a></i>
 </li>
 <li><a href="http://www.linkedin.com/in/jameshendricks">James Hendricks</a>, Ph.D., 2009.
-<br>Thesis: <i><a href="./theses/hendricks.pdf">Efficient Byzantine Fault Tolerance for Scalable Storage and Services</a></i>
+<br>Dissertation: <i><a href="./theses/hendricks.pdf">Efficient Byzantine Fault Tolerance for Scalable Storage and Services</a></i>
 </li>
 <li><a href="https://progwriter.github.io">Victor Heorhiadi</a>, Ph.D., 2017.
-<br>Thesis: <i><a href="https://doi.org/10.17615/hwdy-sa92">Expression and Composition of Optimization-Based Applications for Software-Defined Networking</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/hwdy-sa92">Expression and Composition of Optimization-Based Applications for Software-Defined Networking</a></i>
 </li>
 <li><a href="https://www.linkedin.com/pub/peng-li/74/b77/7b0">Peng Li</a>, Ph.D., 2014.
-<br>Thesis: <i><a href="https://doi.org/10.17615/a806-4792">Replication and Placement for Security in Distributed Systems</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/a806-4792">Replication and Placement for Security in Distributed Systems</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/sheng-liu-00345b15a/">Sheng Liu</a>, Ph.D., 2021.
-<br>Thesis: <i><a href="https://doi.org/10.17615/tpbb-v928">Efficient and Safe Migration of Network Functions Using Software-Defined Networking</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/tpbb-v928">Efficient and Safe Migration of Network Functions Using Software-Defined Networking</a></i>
 <li><a href="http://www.linkedin.com/in/jonmccune/">Jonathan McCune</a>, Ph.D., 2009.
-<br>Thesis: <i><a href="./theses/mccune.pdf">Reducing the Trusted Computing Base for Applications on Commodity Systems</a></i>
+<br>Dissertation: <i><a href="./theses/mccune.pdf">Reducing the Trusted Computing Base for Applications on Commodity Systems</a></i>
 </li>
 <li><a href="https://www.linkedin.com/in/michael-merideth/">Michael Merideth</a>, Ph.D., 2009.
-<br>Thesis: <i><a href="./theses/merideth.pdf">Efficient Survivability for Highly Replicated Services</a></i>
+<br>Dissertation: <i><a href="./theses/merideth.pdf">Efficient Survivability for Highly Replicated Services</a></i>
 </li>
 <li><a href="http://www.ccs.neu.edu/home/alina/index.html">Alina Oprea</a>, Ph.D., 2007.
-<br>Thesis: <i><a href="./theses/aoprea.pdf">Efficient Cryptographic
+<br>Dissertation: <i><a href="./theses/aoprea.pdf">Efficient Cryptographic
 Techniques for Securing Storage Systems</a></i>
 </li>
 <li><a href="http://www.linkedin.com/pub/florin-oprea/1/829/b6">Florian
 Oprea</a>, Ph.D., 2008.
-<br>Thesis: <i><a href="./theses/foprea.pdf">Quorum Placement on
+<br>Dissertation: <i><a href="./theses/foprea.pdf">Quorum Placement on
 Wide-Area Networks</a></i>
 </li>
 <li><a href="https://andrewreed.io">Andrew Reed</a>, Ph.D., 2025.
-  <br>Thesis: <i>Hiding Object Sizes with Constrained Padding in Multiple Settings</i>
+  <br>Dissertation: <i><a href="https://doi.org/10.17615/88rs-b072">Hiding Object Sizes with Constrained Padding in Multiple Settings</a></i>
 </li>
 <li><a href="http://uk.linkedin.com/pub/asad-samar/0/ba8/7b8/">Asad Samar</a>, Ph.D., 2006.
-<br>Thesis: <i><a href="./theses/samar.pdf">Quiver on the Edge:
+<br>Dissertation: <i><a href="./theses/samar.pdf">Quiver on the Edge:
 Consistent Scalable Edge Services</a></i>
 </li>
 <li><a href="http://users.ece.cmu.edu/~vsekar/">Vyas Sekar</a>, Ph.D., 2010.
-<br>Thesis: <i><a href="./theses/sekar.pdf">Effective Network Management
+<br>Dissertation: <i><a href="./theses/sekar.pdf">Effective Network Management
 via System-Wide Coordination and Optimization</a></i>
 </li>
 <li><a href="https://kcwang.io">Ke Coby Wang</a>, Ph.D., 2021.
-<br>Thesis: <i><a href="https://doi.org/10.17615/y99t-yj52">Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</a></i></li>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/y99t-yj52">Federated Detection of Cross-Site Credential Vulnerabilities and Attacks</a></i></li>
 <li><a href="http://www.linkedin.com/pub/lei-wei/2a/155/b65/">Lei Wei</a>, Ph.D., 2013.
-<br>Thesis: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/kv0e-4e39">Privacy-Preserving Regular Expression Evaluation on Encrypted Data</a></i></li>
 <li><a href="https://www.linkedin.com/in/qiuyuxiao/">Qiuyu Xiao</a>, Ph.D., 2019.
-<br>Thesis: <i><a href="https://doi.org/10.17615/ph84-bj53">Efficient Data Protection by Noising, Masking, and Metering</a></i></li>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/ph84-bj53">Efficient Data Protection by Noising, Masking, and Metering</a></i></li>
 <li><a href="http://www.linkedin.com/pub/ting-fang-yen/32/4a0/20b">Ting-Fang Yen</a>, Ph.D., 2011.
-<br>Thesis: <i><a href="./theses/yen.pdf">Detecting Stealthy Malware Using Behavioral Features in Network Traffic</a></i>
+<br>Dissertation: <i><a href="./theses/yen.pdf">Detecting Stealthy Malware Using Behavioral Features in Network Traffic</a></i>
 </li>
 
 <li><a href="http://yinqian.org">Yinqian Zhang</a>, Ph.D., 2014.
-<br>Thesis: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/xt8k-ee40">Cache-Based Side-Channel Attacks in Multi-Tenant Public Clouds and Their Countermeasures</a></i>
 </li>
 
 <li><a href="https://www.microsoft.com/en-us/research/people/ziqiaozhou/">Ziqiao Zhou</a>, Ph.D., 2020.
-<br>Thesis: <i><a href="https://doi.org/10.17615/h4m8-cq49">Evaluating Information Leakage by Quantitative and Interpretable Measurements</a></i>
+<br>Dissertation: <i><a href="https://doi.org/10.17615/h4m8-cq49">Evaluating Information Leakage by Quantitative and Interpretable Measurements</a></i>
 </li>
 </ul>
 </p>
