Updated current student list.

--- a/students.html
+++ b/students.html
@@ -41,10 +41,9 @@ application substantially.
 <li>Adam Humphries</li>
 <li>Zonghao Huang</li>
 <li>Mridu Nanda</li>
-<li>Sara Schwarz-Iglesias</li>
+<li>Sara Schwarz</li>
 <li>Weili Wang</li>
 <li>Xinyuan Zhang</li>
-<li>Yujie Zhang</li>
 </ul>
 </p>
 
